--- a/OOP_Chess/MainWindow.xaml
+++ b/OOP_Chess/MainWindow.xaml
@@ -21,7 +21,8 @@
             <RowDefinition Height="23*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="lblBoard" Text="Text" IsReadOnly="True" Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="624" Width="123"/>
+        <Grid Name="ChessBoardGrid" Grid.Row="3" Grid.Column="1"/>
+        <TextBox Name="lblBoard" Text="Text" IsReadOnly="True" Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="624" Width="123"/>
 
     </Grid>
 </Window>
